{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 19,
  "lineage": "0b5be7d1-9884-ed4c-3558-3ba08a865079",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067ff69a856e3dc25",
            "domain": "vpc",
            "id": "eipalloc-067ff69a856e3dc25",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-227-44-214.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.44.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "nat_eip_Name": "Naveen-eip"
            },
            "tags_all": {
              "nat_eip_Name": "Naveen-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049474717204:internet-gateway/igw-0585daa27bc2413c4",
            "id": "igw-0585daa27bc2413c4",
            "owner_id": "049474717204",
            "tags": {
              "Igw_Name": "Naveen-IGW"
            },
            "tags_all": {
              "Igw_Name": "Naveen-IGW"
            },
            "vpc_id": "vpc-0a6724b2b79ab7e62"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067ff69a856e3dc25",
            "connectivity_type": "public",
            "id": "nat-04b74dbf145409981",
            "network_interface_id": "eni-009fc53c901b8ae62",
            "private_ip": "10.0.0.55",
            "public_ip": "44.227.44.214",
            "subnet_id": "subnet-0c27330dd27793c18",
            "tags": {
              "Name": "Naveen-nat"
            },
            "tags_all": {
              "Name": "Naveen-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049474717204:route-table/rtb-0f27040ff6d96d2de",
            "id": "rtb-0f27040ff6d96d2de",
            "owner_id": "049474717204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04b74dbf145409981",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6724b2b79ab7e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049474717204:route-table/rtb-023ce4365d7cb273d",
            "id": "rtb-023ce4365d7cb273d",
            "owner_id": "049474717204",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0585daa27bc2413c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Naveen-pubRT"
            },
            "tags_all": {
              "Name": "Naveen-pubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6724b2b79ab7e62"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0034e7aad24636073",
            "route_table_id": "rtb-0f27040ff6d96d2de",
            "subnet_id": "subnet-0bc04344cf5ba8078"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c44ad51731e36d53",
            "route_table_id": "rtb-023ce4365d7cb273d",
            "subnet_id": "subnet-0c27330dd27793c18"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049474717204:subnet/subnet-0bc04344cf5ba8078",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc04344cf5ba8078",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049474717204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "private_subnet_Name": "Naveen-privatesub"
            },
            "tags_all": {
              "private_subnet_Name": "Naveen-privatesub"
            },
            "vpc_id": "vpc-0a6724b2b79ab7e62"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049474717204:subnet/subnet-0c27330dd27793c18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c27330dd27793c18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "049474717204",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "public_subnet_Name": "Naveen-publicsub"
            },
            "tags_all": {
              "public_subnet_Name": "Naveen-publicsub"
            },
            "vpc_id": "vpc-0a6724b2b79ab7e62"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:049474717204:vpc/vpc-0a6724b2b79ab7e62",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/18",
            "default_network_acl_id": "acl-043dfd07b57bc8346",
            "default_route_table_id": "rtb-00931cb34dfc810af",
            "default_security_group_id": "sg-09a3a690a22b23fe0",
            "dhcp_options_id": "dopt-0ab6835f1a8862b57",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a6724b2b79ab7e62",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00931cb34dfc810af",
            "owner_id": "049474717204",
            "tags": {
              "vpc_Name": "naveen-vpc"
            },
            "tags_all": {
              "vpc_Name": "naveen-vpc"
            }
          }
        }
      ]
    }
  ]
}